--- a/package.json
+++ b/package.json
@@ -6,15 +6,56 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --verbose",
+    "gen-types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "next": "12.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.6.9",
+    "@apollo/react-hooks": "^4.0.0",
+    "@heroicons/react": "^1.0.6",
+    "cross-fetch": "^3.1.5",
+    "graphql": "^16.5.0",
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "@babel/core": "7.17.9",
+    "@graphql-codegen/cli": "2.11.3",
+    "@graphql-codegen/typescript": "^2.7.2",
+    "@graphql-codegen/typescript-operations": "2.5.2",
+    "@graphql-codegen/typescript-react-apollo": "3.3.2",
+    "@testing-library/dom": "7.30.3",
+    "@testing-library/jest-dom": "5.11.10",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/user-event": "13.1.3",
+    "@types/jest": "26.0.22",
+    "@types/node": "^18.6.4",
+    "@types/react": "17.0.2",
+    "autoprefixer": "^10.4.8",
+    "babel-jest": "26.6.3",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "12.2.4",
+    "jest": "26.6.3",
+    "jest-css-modules": "^2.1.0",
+    "msw": "0.35.0",
+    "next-page-tester": "0.29.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    }
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
